--- a/lab/cuvalley_preprocessing.ipynb
+++ b/lab/cuvalley_preprocessing.ipynb
@@ -633,7 +633,7 @@
         "from bokeh.models import  ColumnDataSource,Range1d, LabelSet, Label\n",
         "\n",
         "output_notebook()\n",
-        "api_key = \"AIzaSyB-i-tHHl0mopVFPr_e1aOSOfxWwrudOcg\"\n",
+        "api_key = \"xxx\"\n",
         "bokeh_width, bokeh_height = 1200,800\n",
         "lat, lon = 51.6694, 16.0927\n",
         "\n",
